// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhoneNumberField component renders 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-eflmh {
    padding-left: var(--space-2);
    --PhoneInputCountrySelect-marginRight: 0;
    --PhoneInput-color--focus: var(--colors-primary800);
    --PhoneInputCountrySelectArrow-color--focus: var(--colors-primary800);
    --PhoneInputCountryFlag-borderColor--focus: var(--colors-primary800);
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="PHONE NUMBER FIELD"
        >
          PHONE NUMBER FIELD
        </label>
      </div>
      <div
        class="c-dhzjXW c-kOvGWL c-eflmh c-kOvGWL-dNqCDY-size-md"
      >
        <div
          class="PhoneInput"
        >
          <div
            class="PhoneInputCountry"
          >
            <select
              aria-label="Phone number country"
              class="PhoneInputCountrySelect"
              name="PHONE NUMBER FIELDCountry"
            >
              <option
                value="ZZ"
              >
                International
              </option>
              <option
                value="AF"
              >
                Afghanistan
              </option>
              <option
                value="AX"
              >
                Åland Islands
              </option>
              <option
                value="AL"
              >
                Albania
              </option>
              <option
                value="DZ"
              >
                Algeria
              </option>
              <option
                value="AS"
              >
                American Samoa
              </option>
              <option
                value="AD"
              >
                Andorra
              </option>
              <option
                value="AO"
              >
                Angola
              </option>
              <option
                value="AI"
              >
                Anguilla
              </option>
              <option
                value="AG"
              >
                Antigua and Barbuda
              </option>
              <option
                value="AR"
              >
                Argentina
              </option>
              <option
                value="AM"
              >
                Armenia
              </option>
              <option
                value="AW"
              >
                Aruba
              </option>
              <option
                value="AC"
              >
                Ascension Island
              </option>
              <option
                value="AU"
              >
                Australia
              </option>
              <option
                value="AT"
              >
                Austria
              </option>
              <option
                value="AZ"
              >
                Azerbaijan
              </option>
              <option
                value="BS"
              >
                Bahamas
              </option>
              <option
                value="BH"
              >
                Bahrain
              </option>
              <option
                value="BD"
              >
                Bangladesh
              </option>
              <option
                value="BB"
              >
                Barbados
              </option>
              <option
                value="BY"
              >
                Belarus
              </option>
              <option
                value="BE"
              >
                Belgium
              </option>
              <option
                value="BZ"
              >
                Belize
              </option>
              <option
                value="BJ"
              >
                Benin
              </option>
              <option
                value="BM"
              >
                Bermuda
              </option>
              <option
                value="BT"
              >
                Bhutan
              </option>
              <option
                value="BO"
              >
                Bolivia
              </option>
              <option
                value="BQ"
              >
                Bonaire, Sint Eustatius and Saba
              </option>
              <option
                value="BA"
              >
                Bosnia and Herzegovina
              </option>
              <option
                value="BW"
              >
                Botswana
              </option>
              <option
                value="BR"
              >
                Brazil
              </option>
              <option
                value="IO"
              >
                British Indian Ocean Territory
              </option>
              <option
                value="BN"
              >
                Brunei Darussalam
              </option>
              <option
                value="BG"
              >
                Bulgaria
              </option>
              <option
                value="BF"
              >
                Burkina Faso
              </option>
              <option
                value="BI"
              >
                Burundi
              </option>
              <option
                value="KH"
              >
                Cambodia
              </option>
              <option
                value="CM"
              >
                Cameroon
              </option>
              <option
                value="CA"
              >
                Canada
              </option>
              <option
                value="CV"
              >
                Cape Verde
              </option>
              <option
                value="KY"
              >
                Cayman Islands
              </option>
              <option
                value="CF"
              >
                Central African Republic
              </option>
              <option
                value="TD"
              >
                Chad
              </option>
              <option
                value="CL"
              >
                Chile
              </option>
              <option
                value="CN"
              >
                China
              </option>
              <option
                value="CX"
              >
                Christmas Island
              </option>
              <option
                value="CC"
              >
                Cocos (Keeling) Islands
              </option>
              <option
                value="CO"
              >
                Colombia
              </option>
              <option
                value="KM"
              >
                Comoros
              </option>
              <option
                value="CG"
              >
                Congo
              </option>
              <option
                value="CD"
              >
                Congo, Democratic Republic of the
              </option>
              <option
                value="CK"
              >
                Cook Islands
              </option>
              <option
                value="CR"
              >
                Costa Rica
              </option>
              <option
                value="CI"
              >
                Cote d'Ivoire
              </option>
              <option
                value="HR"
              >
                Croatia
              </option>
              <option
                value="CU"
              >
                Cuba
              </option>
              <option
                value="CW"
              >
                Curaçao
              </option>
              <option
                value="CY"
              >
                Cyprus
              </option>
              <option
                value="CZ"
              >
                Czech Republic
              </option>
              <option
                value="DK"
              >
                Denmark
              </option>
              <option
                value="DJ"
              >
                Djibouti
              </option>
              <option
                value="DM"
              >
                Dominica
              </option>
              <option
                value="DO"
              >
                Dominican Republic
              </option>
              <option
                value="EC"
              >
                Ecuador
              </option>
              <option
                value="EG"
              >
                Egypt
              </option>
              <option
                value="SV"
              >
                El Salvador
              </option>
              <option
                value="GQ"
              >
                Equatorial Guinea
              </option>
              <option
                value="ER"
              >
                Eritrea
              </option>
              <option
                value="EE"
              >
                Estonia
              </option>
              <option
                value="ET"
              >
                Ethiopia
              </option>
              <option
                value="FK"
              >
                Falkland Islands
              </option>
              <option
                value="FO"
              >
                Faroe Islands
              </option>
              <option
                value="FM"
              >
                Federated States of Micronesia
              </option>
              <option
                value="FJ"
              >
                Fiji
              </option>
              <option
                value="FI"
              >
                Finland
              </option>
              <option
                value="FR"
              >
                France
              </option>
              <option
                value="GF"
              >
                French Guiana
              </option>
              <option
                value="PF"
              >
                French Polynesia
              </option>
              <option
                value="GA"
              >
                Gabon
              </option>
              <option
                value="GM"
              >
                Gambia
              </option>
              <option
                value="GE"
              >
                Georgia
              </option>
              <option
                value="DE"
              >
                Germany
              </option>
              <option
                value="GH"
              >
                Ghana
              </option>
              <option
                value="GI"
              >
                Gibraltar
              </option>
              <option
                value="GR"
              >
                Greece
              </option>
              <option
                value="GL"
              >
                Greenland
              </option>
              <option
                value="GD"
              >
                Grenada
              </option>
              <option
                value="GP"
              >
                Guadeloupe
              </option>
              <option
                value="GU"
              >
                Guam
              </option>
              <option
                value="GT"
              >
                Guatemala
              </option>
              <option
                value="GG"
              >
                Guernsey
              </option>
              <option
                value="GN"
              >
                Guinea
              </option>
              <option
                value="GW"
              >
                Guinea-Bissau
              </option>
              <option
                value="GY"
              >
                Guyana
              </option>
              <option
                value="HT"
              >
                Haiti
              </option>
              <option
                value="VA"
              >
                Holy See (Vatican City State)
              </option>
              <option
                value="HN"
              >
                Honduras
              </option>
              <option
                value="HK"
              >
                Hong Kong
              </option>
              <option
                value="HU"
              >
                Hungary
              </option>
              <option
                value="IS"
              >
                Iceland
              </option>
              <option
                value="IN"
              >
                India
              </option>
              <option
                value="ID"
              >
                Indonesia
              </option>
              <option
                value="IR"
              >
                Iran
              </option>
              <option
                value="IQ"
              >
                Iraq
              </option>
              <option
                value="IE"
              >
                Ireland
              </option>
              <option
                value="IM"
              >
                Isle of Man
              </option>
              <option
                value="IL"
              >
                Israel
              </option>
              <option
                value="IT"
              >
                Italy
              </option>
              <option
                value="JM"
              >
                Jamaica
              </option>
              <option
                value="JP"
              >
                Japan
              </option>
              <option
                value="JE"
              >
                Jersey
              </option>
              <option
                value="JO"
              >
                Jordan
              </option>
              <option
                value="KZ"
              >
                Kazakhstan
              </option>
              <option
                value="KE"
              >
                Kenya
              </option>
              <option
                value="KI"
              >
                Kiribati
              </option>
              <option
                value="XK"
              >
                Kosovo
              </option>
              <option
                value="KW"
              >
                Kuwait
              </option>
              <option
                value="KG"
              >
                Kyrgyzstan
              </option>
              <option
                value="LA"
              >
                Laos
              </option>
              <option
                value="LV"
              >
                Latvia
              </option>
              <option
                value="LB"
              >
                Lebanon
              </option>
              <option
                value="LS"
              >
                Lesotho
              </option>
              <option
                value="LR"
              >
                Liberia
              </option>
              <option
                value="LY"
              >
                Libya
              </option>
              <option
                value="LI"
              >
                Liechtenstein
              </option>
              <option
                value="LT"
              >
                Lithuania
              </option>
              <option
                value="LU"
              >
                Luxembourg
              </option>
              <option
                value="MO"
              >
                Macao
              </option>
              <option
                value="MG"
              >
                Madagascar
              </option>
              <option
                value="MW"
              >
                Malawi
              </option>
              <option
                value="MY"
              >
                Malaysia
              </option>
              <option
                value="MV"
              >
                Maldives
              </option>
              <option
                value="ML"
              >
                Mali
              </option>
              <option
                value="MT"
              >
                Malta
              </option>
              <option
                value="MH"
              >
                Marshall Islands
              </option>
              <option
                value="MQ"
              >
                Martinique
              </option>
              <option
                value="MR"
              >
                Mauritania
              </option>
              <option
                value="MU"
              >
                Mauritius
              </option>
              <option
                value="YT"
              >
                Mayotte
              </option>
              <option
                value="MX"
              >
                Mexico
              </option>
              <option
                value="MD"
              >
                Moldova
              </option>
              <option
                value="MC"
              >
                Monaco
              </option>
              <option
                value="MN"
              >
                Mongolia
              </option>
              <option
                value="ME"
              >
                Montenegro
              </option>
              <option
                value="MS"
              >
                Montserrat
              </option>
              <option
                value="MA"
              >
                Morocco
              </option>
              <option
                value="MZ"
              >
                Mozambique
              </option>
              <option
                value="MM"
              >
                Myanmar
              </option>
              <option
                value="NA"
              >
                Namibia
              </option>
              <option
                value="NR"
              >
                Nauru
              </option>
              <option
                value="NP"
              >
                Nepal
              </option>
              <option
                value="NL"
              >
                Netherlands
              </option>
              <option
                value="NC"
              >
                New Caledonia
              </option>
              <option
                value="NZ"
              >
                New Zealand
              </option>
              <option
                value="NI"
              >
                Nicaragua
              </option>
              <option
                value="NE"
              >
                Niger
              </option>
              <option
                value="NG"
              >
                Nigeria
              </option>
              <option
                value="NU"
              >
                Niue
              </option>
              <option
                value="NF"
              >
                Norfolk Island
              </option>
              <option
                value="KP"
              >
                North Korea
              </option>
              <option
                value="MK"
              >
                North Macedonia
              </option>
              <option
                value="MP"
              >
                Northern Mariana Islands
              </option>
              <option
                value="NO"
              >
                Norway
              </option>
              <option
                value="OM"
              >
                Oman
              </option>
              <option
                value="PK"
              >
                Pakistan
              </option>
              <option
                value="PW"
              >
                Palau
              </option>
              <option
                value="PS"
              >
                Palestine
              </option>
              <option
                value="PA"
              >
                Panama
              </option>
              <option
                value="PG"
              >
                Papua New Guinea
              </option>
              <option
                value="PY"
              >
                Paraguay
              </option>
              <option
                value="PE"
              >
                Peru
              </option>
              <option
                value="PH"
              >
                Philippines
              </option>
              <option
                value="PL"
              >
                Poland
              </option>
              <option
                value="PT"
              >
                Portugal
              </option>
              <option
                value="PR"
              >
                Puerto Rico
              </option>
              <option
                value="QA"
              >
                Qatar
              </option>
              <option
                value="RE"
              >
                Reunion
              </option>
              <option
                value="RO"
              >
                Romania
              </option>
              <option
                value="RU"
              >
                Russia
              </option>
              <option
                value="RW"
              >
                Rwanda
              </option>
              <option
                value="BL"
              >
                Saint Barthélemy
              </option>
              <option
                value="SH"
              >
                Saint Helena
              </option>
              <option
                value="KN"
              >
                Saint Kitts and Nevis
              </option>
              <option
                value="LC"
              >
                Saint Lucia
              </option>
              <option
                value="MF"
              >
                Saint Martin (French Part)
              </option>
              <option
                value="PM"
              >
                Saint Pierre and Miquelon
              </option>
              <option
                value="VC"
              >
                Saint Vincent and the Grenadines
              </option>
              <option
                value="WS"
              >
                Samoa
              </option>
              <option
                value="SM"
              >
                San Marino
              </option>
              <option
                value="ST"
              >
                Sao Tome and Principe
              </option>
              <option
                value="SA"
              >
                Saudi Arabia
              </option>
              <option
                value="SN"
              >
                Senegal
              </option>
              <option
                value="RS"
              >
                Serbia
              </option>
              <option
                value="SC"
              >
                Seychelles
              </option>
              <option
                value="SL"
              >
                Sierra Leone
              </option>
              <option
                value="SG"
              >
                Singapore
              </option>
              <option
                value="SX"
              >
                Sint Maarten
              </option>
              <option
                value="SK"
              >
                Slovakia
              </option>
              <option
                value="SI"
              >
                Slovenia
              </option>
              <option
                value="SB"
              >
                Solomon Islands
              </option>
              <option
                value="SO"
              >
                Somalia
              </option>
              <option
                value="ZA"
              >
                South Africa
              </option>
              <option
                value="KR"
              >
                South Korea
              </option>
              <option
                value="SS"
              >
                South Sudan
              </option>
              <option
                value="ES"
              >
                Spain
              </option>
              <option
                value="LK"
              >
                Sri Lanka
              </option>
              <option
                value="SD"
              >
                Sudan
              </option>
              <option
                value="SR"
              >
                Suriname
              </option>
              <option
                value="SJ"
              >
                Svalbard and Jan Mayen
              </option>
              <option
                value="SZ"
              >
                Swaziland
              </option>
              <option
                value="SE"
              >
                Sweden
              </option>
              <option
                value="CH"
              >
                Switzerland
              </option>
              <option
                value="SY"
              >
                Syria
              </option>
              <option
                value="TW"
              >
                Taiwan
              </option>
              <option
                value="TJ"
              >
                Tajikistan
              </option>
              <option
                value="TZ"
              >
                Tanzania
              </option>
              <option
                value="TH"
              >
                Thailand
              </option>
              <option
                value="TL"
              >
                Timor-Leste
              </option>
              <option
                value="TG"
              >
                Togo
              </option>
              <option
                value="TK"
              >
                Tokelau
              </option>
              <option
                value="TO"
              >
                Tonga
              </option>
              <option
                value="TT"
              >
                Trinidad and Tobago
              </option>
              <option
                value="TA"
              >
                Tristan da Cunha
              </option>
              <option
                value="TN"
              >
                Tunisia
              </option>
              <option
                value="TR"
              >
                Turkey
              </option>
              <option
                value="TM"
              >
                Turkmenistan
              </option>
              <option
                value="TC"
              >
                Turks and Caicos Islands
              </option>
              <option
                value="TV"
              >
                Tuvalu
              </option>
              <option
                value="UG"
              >
                Uganda
              </option>
              <option
                value="UA"
              >
                Ukraine
              </option>
              <option
                value="AE"
              >
                United Arab Emirates
              </option>
              <option
                value="GB"
              >
                United Kingdom
              </option>
              <option
                value="US"
              >
                United States
              </option>
              <option
                value="UY"
              >
                Uruguay
              </option>
              <option
                value="UZ"
              >
                Uzbekistan
              </option>
              <option
                value="VU"
              >
                Vanuatu
              </option>
              <option
                value="VE"
              >
                Venezuela
              </option>
              <option
                value="VN"
              >
                Vietnam
              </option>
              <option
                value="VG"
              >
                Virgin Islands, British
              </option>
              <option
                value="VI"
              >
                Virgin Islands, U.S.
              </option>
              <option
                value="WF"
              >
                Wallis and Futuna
              </option>
              <option
                value="EH"
              >
                Western Sahara
              </option>
              <option
                value="YE"
              >
                Yemen
              </option>
              <option
                value="ZM"
              >
                Zambia
              </option>
              <option
                value="ZW"
              >
                Zimbabwe
              </option>
            </select>
            <div
              aria-hidden="true"
              class="PhoneInputCountryIcon PhoneInputCountryIcon--border"
            >
              <img
                alt="Japan"
                class="PhoneInputCountryIconImg"
                src="https://purecatamphetamine.github.io/country-flag-icons/3x2/JP.svg"
              />
            </div>
            <div
              class="PhoneInputCountrySelectArrow"
            />
          </div>
          <input
            autocomplete="tel"
            class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-foJWJd PhoneInputInput"
            name="PHONE NUMBER FIELD"
            placeholder="06-3525-3163"
            type="tel"
            value=""
          />
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`PhoneNumberField component renders a field in error state 1`] = `
@media  {
  .c-dhzjXW {
    display: flex;
  }

  .c-cVSpVL {
    color: var(--colors-tonal500);
    font-family: var(--fonts-body);
    margin: 0;
  }

  .c-kOvGWL {
    background: white;
    color: var(--colors-grey1000);
    border: 1px solid var(--colors-grey800);
    border-radius: var(--radii-0);
    transition: background 100ms ease-out, borderColor 100ms ease-out;
    width: 100%;
  }

  .c-kOvGWL:focus-within {
    border-color: var(--colors-blue800);
  }

  .c-eflmh {
    padding-left: var(--space-2);
    --PhoneInputCountrySelect-marginRight: 0;
    --PhoneInput-color--focus: var(--colors-primary800);
    --PhoneInputCountrySelectArrow-color--focus: var(--colors-primary800);
    --PhoneInputCountryFlag-borderColor--focus: var(--colors-primary800);
  }

  .c-dyvMgW {
    font-family: var(--fonts-body);
    font-weight: 400;
    margin: 0;
  }

  .c-dyvMgW > .c-dyvMgW:before,
  .c-dyvMgW > .c-dyvMgW:after {
    display: none;
  }

  .c-foJWJd {
    -webkit-appearance: none;
    appearance: none;
    border: none;
    background: none;
    background-image: none;
    background-color: transparent;
    box-shadow: none;
    box-sizing: border-box;
  }

  .c-foJWJd:focus {
    outline: none;
  }

  .c-foJWJd {
    padding-left: var(--space-3);
    padding-right: var(--space-3);
    height: 100%;
    width: 100%;
  }

  .c-fNCeYG {
    color: var(--colors-danger);
    margin-left: var(--space-1);
    font-weight: 400;
  }

  .c-hMRxhp {
    display: inline-block;
    fill: none;
    flex-shrink: 0;
    stroke: currentcolor;
    stroke-linecap: round;
    stroke-linejoin: round;
    vertical-align: middle;
  }
}

@media  {
  .c-cVSpVL-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-cVSpVL-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-cVSpVL-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-cVSpVL-grKRUr-type-block {
    display: block;
    font-weight: 600;
  }

  .c-kOvGWL-dNqCDY-size-md {
    height: var(--sizes-4);
  }

  .c-dyvMgW-gvmVBy-size-md {
    font-size: var(--fontSizes-md);
    line-height: 1.5;
  }

  .c-dyvMgW-gvmVBy-size-md::before {
    content: '';
    margin-bottom: -0.3864em;
    display: table;
  }

  .c-dyvMgW-gvmVBy-size-md::after {
    content: '';
    margin-top: -0.3864em;
    display: table;
  }

  .c-kOvGWL-kRqBPT-disabled-true {
    opacity: 0.3;
    cursor: not-allowed;
  }

  .c-kOvGWL-iuasYV-state-error {
    border-color: var(--colors-danger);
  }

  .c-PJLV-iymbh-theme-error {
    color: var(--colors-danger);
  }

  .c-hMRxhp-cyeZeh-size-sm {
    height: var(--sizes-1);
    width: var(--sizes-1);
    stroke-width: 1.5;
  }

  .c-dyvMgW-bndJoy-size-sm {
    font-size: var(--fontSizes-sm);
    line-height: 1.53;
  }

  .c-dyvMgW-bndJoy-size-sm::before {
    content: '';
    margin-bottom: -0.4056em;
    display: table;
  }

  .c-dyvMgW-bndJoy-size-sm::after {
    content: '';
    margin-top: -0.4056em;
    display: table;
  }
}

@media  {
  .c-dhzjXW-iwHglP-css {
    justify-content: space-between;
    align-items: center;
    margin-bottom: var(--space-3);
  }

  .c-dhzjXW-ijkHUQU-css {
    margin-top: var(--space-2);
  }

  .c-hMRxhp-ijkHsGW-css {
    margin-right: var(--space-2);
  }

  .c-dyvMgW-iiTbKsx-css {
    transform: translateY(var(--space-0));
  }
}

<div>
  <form
    aria-label="form"
    class="c-PJLV"
  >
    <div
      class="c-PJLV"
    >
      <div
        class="c-dhzjXW c-dhzjXW-iwHglP-css"
      >
        <label
          class="c-cVSpVL c-cVSpVL-gvmVBy-size-md c-cVSpVL-grKRUr-type-block"
          for="PHONE NUMBER FIELD"
        >
          PHONE NUMBER FIELD
          <span
            aria-hidden="true"
            class="c-fNCeYG"
          >
            *
          </span>
        </label>
      </div>
      <div
        class="c-dhzjXW c-kOvGWL c-eflmh c-kOvGWL-dNqCDY-size-md c-kOvGWL-iuasYV-state-error"
      >
        <div
          class="PhoneInput PhoneInput--focus"
        >
          <div
            class="PhoneInputCountry"
          >
            <select
              aria-label="Phone number country"
              class="PhoneInputCountrySelect"
              name="PHONE NUMBER FIELDCountry"
            >
              <option
                value="ZZ"
              >
                International
              </option>
              <option
                value="AF"
              >
                Afghanistan
              </option>
              <option
                value="AX"
              >
                Åland Islands
              </option>
              <option
                value="AL"
              >
                Albania
              </option>
              <option
                value="DZ"
              >
                Algeria
              </option>
              <option
                value="AS"
              >
                American Samoa
              </option>
              <option
                value="AD"
              >
                Andorra
              </option>
              <option
                value="AO"
              >
                Angola
              </option>
              <option
                value="AI"
              >
                Anguilla
              </option>
              <option
                value="AG"
              >
                Antigua and Barbuda
              </option>
              <option
                value="AR"
              >
                Argentina
              </option>
              <option
                value="AM"
              >
                Armenia
              </option>
              <option
                value="AW"
              >
                Aruba
              </option>
              <option
                value="AC"
              >
                Ascension Island
              </option>
              <option
                value="AU"
              >
                Australia
              </option>
              <option
                value="AT"
              >
                Austria
              </option>
              <option
                value="AZ"
              >
                Azerbaijan
              </option>
              <option
                value="BS"
              >
                Bahamas
              </option>
              <option
                value="BH"
              >
                Bahrain
              </option>
              <option
                value="BD"
              >
                Bangladesh
              </option>
              <option
                value="BB"
              >
                Barbados
              </option>
              <option
                value="BY"
              >
                Belarus
              </option>
              <option
                value="BE"
              >
                Belgium
              </option>
              <option
                value="BZ"
              >
                Belize
              </option>
              <option
                value="BJ"
              >
                Benin
              </option>
              <option
                value="BM"
              >
                Bermuda
              </option>
              <option
                value="BT"
              >
                Bhutan
              </option>
              <option
                value="BO"
              >
                Bolivia
              </option>
              <option
                value="BQ"
              >
                Bonaire, Sint Eustatius and Saba
              </option>
              <option
                value="BA"
              >
                Bosnia and Herzegovina
              </option>
              <option
                value="BW"
              >
                Botswana
              </option>
              <option
                value="BR"
              >
                Brazil
              </option>
              <option
                value="IO"
              >
                British Indian Ocean Territory
              </option>
              <option
                value="BN"
              >
                Brunei Darussalam
              </option>
              <option
                value="BG"
              >
                Bulgaria
              </option>
              <option
                value="BF"
              >
                Burkina Faso
              </option>
              <option
                value="BI"
              >
                Burundi
              </option>
              <option
                value="KH"
              >
                Cambodia
              </option>
              <option
                value="CM"
              >
                Cameroon
              </option>
              <option
                value="CA"
              >
                Canada
              </option>
              <option
                value="CV"
              >
                Cape Verde
              </option>
              <option
                value="KY"
              >
                Cayman Islands
              </option>
              <option
                value="CF"
              >
                Central African Republic
              </option>
              <option
                value="TD"
              >
                Chad
              </option>
              <option
                value="CL"
              >
                Chile
              </option>
              <option
                value="CN"
              >
                China
              </option>
              <option
                value="CX"
              >
                Christmas Island
              </option>
              <option
                value="CC"
              >
                Cocos (Keeling) Islands
              </option>
              <option
                value="CO"
              >
                Colombia
              </option>
              <option
                value="KM"
              >
                Comoros
              </option>
              <option
                value="CG"
              >
                Congo
              </option>
              <option
                value="CD"
              >
                Congo, Democratic Republic of the
              </option>
              <option
                value="CK"
              >
                Cook Islands
              </option>
              <option
                value="CR"
              >
                Costa Rica
              </option>
              <option
                value="CI"
              >
                Cote d'Ivoire
              </option>
              <option
                value="HR"
              >
                Croatia
              </option>
              <option
                value="CU"
              >
                Cuba
              </option>
              <option
                value="CW"
              >
                Curaçao
              </option>
              <option
                value="CY"
              >
                Cyprus
              </option>
              <option
                value="CZ"
              >
                Czech Republic
              </option>
              <option
                value="DK"
              >
                Denmark
              </option>
              <option
                value="DJ"
              >
                Djibouti
              </option>
              <option
                value="DM"
              >
                Dominica
              </option>
              <option
                value="DO"
              >
                Dominican Republic
              </option>
              <option
                value="EC"
              >
                Ecuador
              </option>
              <option
                value="EG"
              >
                Egypt
              </option>
              <option
                value="SV"
              >
                El Salvador
              </option>
              <option
                value="GQ"
              >
                Equatorial Guinea
              </option>
              <option
                value="ER"
              >
                Eritrea
              </option>
              <option
                value="EE"
              >
                Estonia
              </option>
              <option
                value="ET"
              >
                Ethiopia
              </option>
              <option
                value="FK"
              >
                Falkland Islands
              </option>
              <option
                value="FO"
              >
                Faroe Islands
              </option>
              <option
                value="FM"
              >
                Federated States of Micronesia
              </option>
              <option
                value="FJ"
              >
                Fiji
              </option>
              <option
                value="FI"
              >
                Finland
              </option>
              <option
                value="FR"
              >
                France
              </option>
              <option
                value="GF"
              >
                French Guiana
              </option>
              <option
                value="PF"
              >
                French Polynesia
              </option>
              <option
                value="GA"
              >
                Gabon
              </option>
              <option
                value="GM"
              >
                Gambia
              </option>
              <option
                value="GE"
              >
                Georgia
              </option>
              <option
                value="DE"
              >
                Germany
              </option>
              <option
                value="GH"
              >
                Ghana
              </option>
              <option
                value="GI"
              >
                Gibraltar
              </option>
              <option
                value="GR"
              >
                Greece
              </option>
              <option
                value="GL"
              >
                Greenland
              </option>
              <option
                value="GD"
              >
                Grenada
              </option>
              <option
                value="GP"
              >
                Guadeloupe
              </option>
              <option
                value="GU"
              >
                Guam
              </option>
              <option
                value="GT"
              >
                Guatemala
              </option>
              <option
                value="GG"
              >
                Guernsey
              </option>
              <option
                value="GN"
              >
                Guinea
              </option>
              <option
                value="GW"
              >
                Guinea-Bissau
              </option>
              <option
                value="GY"
              >
                Guyana
              </option>
              <option
                value="HT"
              >
                Haiti
              </option>
              <option
                value="VA"
              >
                Holy See (Vatican City State)
              </option>
              <option
                value="HN"
              >
                Honduras
              </option>
              <option
                value="HK"
              >
                Hong Kong
              </option>
              <option
                value="HU"
              >
                Hungary
              </option>
              <option
                value="IS"
              >
                Iceland
              </option>
              <option
                value="IN"
              >
                India
              </option>
              <option
                value="ID"
              >
                Indonesia
              </option>
              <option
                value="IR"
              >
                Iran
              </option>
              <option
                value="IQ"
              >
                Iraq
              </option>
              <option
                value="IE"
              >
                Ireland
              </option>
              <option
                value="IM"
              >
                Isle of Man
              </option>
              <option
                value="IL"
              >
                Israel
              </option>
              <option
                value="IT"
              >
                Italy
              </option>
              <option
                value="JM"
              >
                Jamaica
              </option>
              <option
                value="JP"
              >
                Japan
              </option>
              <option
                value="JE"
              >
                Jersey
              </option>
              <option
                value="JO"
              >
                Jordan
              </option>
              <option
                value="KZ"
              >
                Kazakhstan
              </option>
              <option
                value="KE"
              >
                Kenya
              </option>
              <option
                value="KI"
              >
                Kiribati
              </option>
              <option
                value="XK"
              >
                Kosovo
              </option>
              <option
                value="KW"
              >
                Kuwait
              </option>
              <option
                value="KG"
              >
                Kyrgyzstan
              </option>
              <option
                value="LA"
              >
                Laos
              </option>
              <option
                value="LV"
              >
                Latvia
              </option>
              <option
                value="LB"
              >
                Lebanon
              </option>
              <option
                value="LS"
              >
                Lesotho
              </option>
              <option
                value="LR"
              >
                Liberia
              </option>
              <option
                value="LY"
              >
                Libya
              </option>
              <option
                value="LI"
              >
                Liechtenstein
              </option>
              <option
                value="LT"
              >
                Lithuania
              </option>
              <option
                value="LU"
              >
                Luxembourg
              </option>
              <option
                value="MO"
              >
                Macao
              </option>
              <option
                value="MG"
              >
                Madagascar
              </option>
              <option
                value="MW"
              >
                Malawi
              </option>
              <option
                value="MY"
              >
                Malaysia
              </option>
              <option
                value="MV"
              >
                Maldives
              </option>
              <option
                value="ML"
              >
                Mali
              </option>
              <option
                value="MT"
              >
                Malta
              </option>
              <option
                value="MH"
              >
                Marshall Islands
              </option>
              <option
                value="MQ"
              >
                Martinique
              </option>
              <option
                value="MR"
              >
                Mauritania
              </option>
              <option
                value="MU"
              >
                Mauritius
              </option>
              <option
                value="YT"
              >
                Mayotte
              </option>
              <option
                value="MX"
              >
                Mexico
              </option>
              <option
                value="MD"
              >
                Moldova
              </option>
              <option
                value="MC"
              >
                Monaco
              </option>
              <option
                value="MN"
              >
                Mongolia
              </option>
              <option
                value="ME"
              >
                Montenegro
              </option>
              <option
                value="MS"
              >
                Montserrat
              </option>
              <option
                value="MA"
              >
                Morocco
              </option>
              <option
                value="MZ"
              >
                Mozambique
              </option>
              <option
                value="MM"
              >
                Myanmar
              </option>
              <option
                value="NA"
              >
                Namibia
              </option>
              <option
                value="NR"
              >
                Nauru
              </option>
              <option
                value="NP"
              >
                Nepal
              </option>
              <option
                value="NL"
              >
                Netherlands
              </option>
              <option
                value="NC"
              >
                New Caledonia
              </option>
              <option
                value="NZ"
              >
                New Zealand
              </option>
              <option
                value="NI"
              >
                Nicaragua
              </option>
              <option
                value="NE"
              >
                Niger
              </option>
              <option
                value="NG"
              >
                Nigeria
              </option>
              <option
                value="NU"
              >
                Niue
              </option>
              <option
                value="NF"
              >
                Norfolk Island
              </option>
              <option
                value="KP"
              >
                North Korea
              </option>
              <option
                value="MK"
              >
                North Macedonia
              </option>
              <option
                value="MP"
              >
                Northern Mariana Islands
              </option>
              <option
                value="NO"
              >
                Norway
              </option>
              <option
                value="OM"
              >
                Oman
              </option>
              <option
                value="PK"
              >
                Pakistan
              </option>
              <option
                value="PW"
              >
                Palau
              </option>
              <option
                value="PS"
              >
                Palestine
              </option>
              <option
                value="PA"
              >
                Panama
              </option>
              <option
                value="PG"
              >
                Papua New Guinea
              </option>
              <option
                value="PY"
              >
                Paraguay
              </option>
              <option
                value="PE"
              >
                Peru
              </option>
              <option
                value="PH"
              >
                Philippines
              </option>
              <option
                value="PL"
              >
                Poland
              </option>
              <option
                value="PT"
              >
                Portugal
              </option>
              <option
                value="PR"
              >
                Puerto Rico
              </option>
              <option
                value="QA"
              >
                Qatar
              </option>
              <option
                value="RE"
              >
                Reunion
              </option>
              <option
                value="RO"
              >
                Romania
              </option>
              <option
                value="RU"
              >
                Russia
              </option>
              <option
                value="RW"
              >
                Rwanda
              </option>
              <option
                value="BL"
              >
                Saint Barthélemy
              </option>
              <option
                value="SH"
              >
                Saint Helena
              </option>
              <option
                value="KN"
              >
                Saint Kitts and Nevis
              </option>
              <option
                value="LC"
              >
                Saint Lucia
              </option>
              <option
                value="MF"
              >
                Saint Martin (French Part)
              </option>
              <option
                value="PM"
              >
                Saint Pierre and Miquelon
              </option>
              <option
                value="VC"
              >
                Saint Vincent and the Grenadines
              </option>
              <option
                value="WS"
              >
                Samoa
              </option>
              <option
                value="SM"
              >
                San Marino
              </option>
              <option
                value="ST"
              >
                Sao Tome and Principe
              </option>
              <option
                value="SA"
              >
                Saudi Arabia
              </option>
              <option
                value="SN"
              >
                Senegal
              </option>
              <option
                value="RS"
              >
                Serbia
              </option>
              <option
                value="SC"
              >
                Seychelles
              </option>
              <option
                value="SL"
              >
                Sierra Leone
              </option>
              <option
                value="SG"
              >
                Singapore
              </option>
              <option
                value="SX"
              >
                Sint Maarten
              </option>
              <option
                value="SK"
              >
                Slovakia
              </option>
              <option
                value="SI"
              >
                Slovenia
              </option>
              <option
                value="SB"
              >
                Solomon Islands
              </option>
              <option
                value="SO"
              >
                Somalia
              </option>
              <option
                value="ZA"
              >
                South Africa
              </option>
              <option
                value="KR"
              >
                South Korea
              </option>
              <option
                value="SS"
              >
                South Sudan
              </option>
              <option
                value="ES"
              >
                Spain
              </option>
              <option
                value="LK"
              >
                Sri Lanka
              </option>
              <option
                value="SD"
              >
                Sudan
              </option>
              <option
                value="SR"
              >
                Suriname
              </option>
              <option
                value="SJ"
              >
                Svalbard and Jan Mayen
              </option>
              <option
                value="SZ"
              >
                Swaziland
              </option>
              <option
                value="SE"
              >
                Sweden
              </option>
              <option
                value="CH"
              >
                Switzerland
              </option>
              <option
                value="SY"
              >
                Syria
              </option>
              <option
                value="TW"
              >
                Taiwan
              </option>
              <option
                value="TJ"
              >
                Tajikistan
              </option>
              <option
                value="TZ"
              >
                Tanzania
              </option>
              <option
                value="TH"
              >
                Thailand
              </option>
              <option
                value="TL"
              >
                Timor-Leste
              </option>
              <option
                value="TG"
              >
                Togo
              </option>
              <option
                value="TK"
              >
                Tokelau
              </option>
              <option
                value="TO"
              >
                Tonga
              </option>
              <option
                value="TT"
              >
                Trinidad and Tobago
              </option>
              <option
                value="TA"
              >
                Tristan da Cunha
              </option>
              <option
                value="TN"
              >
                Tunisia
              </option>
              <option
                value="TR"
              >
                Turkey
              </option>
              <option
                value="TM"
              >
                Turkmenistan
              </option>
              <option
                value="TC"
              >
                Turks and Caicos Islands
              </option>
              <option
                value="TV"
              >
                Tuvalu
              </option>
              <option
                value="UG"
              >
                Uganda
              </option>
              <option
                value="UA"
              >
                Ukraine
              </option>
              <option
                value="AE"
              >
                United Arab Emirates
              </option>
              <option
                value="GB"
              >
                United Kingdom
              </option>
              <option
                value="US"
              >
                United States
              </option>
              <option
                value="UY"
              >
                Uruguay
              </option>
              <option
                value="UZ"
              >
                Uzbekistan
              </option>
              <option
                value="VU"
              >
                Vanuatu
              </option>
              <option
                value="VE"
              >
                Venezuela
              </option>
              <option
                value="VN"
              >
                Vietnam
              </option>
              <option
                value="VG"
              >
                Virgin Islands, British
              </option>
              <option
                value="VI"
              >
                Virgin Islands, U.S.
              </option>
              <option
                value="WF"
              >
                Wallis and Futuna
              </option>
              <option
                value="EH"
              >
                Western Sahara
              </option>
              <option
                value="YE"
              >
                Yemen
              </option>
              <option
                value="ZM"
              >
                Zambia
              </option>
              <option
                value="ZW"
              >
                Zimbabwe
              </option>
            </select>
            <div
              aria-hidden="true"
              class="PhoneInputCountryIcon PhoneInputCountryIcon--border"
            >
              <img
                alt="United Kingdom"
                class="PhoneInputCountryIconImg"
                src="https://purecatamphetamine.github.io/country-flag-icons/3x2/GB.svg"
              />
            </div>
            <div
              class="PhoneInputCountrySelectArrow"
            />
          </div>
          <input
            autocomplete="tel"
            class="c-dyvMgW c-dyvMgW-gvmVBy-size-md c-foJWJd PhoneInputInput"
            name="PHONE NUMBER FIELD"
            placeholder=""
            type="tel"
            value="123"
          />
        </div>
      </div>
      <div
        class="c-dhzjXW c-PJLV c-PJLV-iymbh-theme-error c-dhzjXW-ijkHUQU-css"
      >
        <svg
          aria-hidden="true"
          class="c-hMRxhp c-hMRxhp-cyeZeh-size-sm c-hMRxhp-ijkHsGW-css"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 8v5"
          />
          <line
            x1="12"
            x2="12"
            y1="16"
            y2="16"
          />
          <circle
            cx="12"
            cy="12"
            r="10"
          />
        </svg>
        <span
          class="c-dyvMgW c-dyvMgW-bndJoy-size-sm c-dyvMgW-iiTbKsx-css"
        >
          Phone number is invalid
        </span>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;
